syntax = "proto3";
package spn.identity.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/tendermint/spn/x/identity/types";

// Query defines the gRPC querier service.
service Query {
    rpc GetUsername(QueryGetUsernameRequest) returns (QueryGetUsernameResponse);
}

message QueryGetUsernameRequest {
    string address = 1;
}

message QueryGetUsernameResponse {
    string username = 1;
}